adding backend for message sending feature

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-MAILCHIMP_API_KEY=your-mailchimp-api-key
-RECEIVER_EMAIL=your-email@gmail.com
+EMAIL=devendrareddy7733@gmail.com
+PASSWORD=nycd sqhc kuwo xpkf
